--- a/wiki/FilterDefinition.wiki
+++ b/wiki/FilterDefinition.wiki
@@ -7,7 +7,7 @@ Definition of filters
 
 = Details =
 
-3 filters, each with a good boundary/bad boundary solution:
+3 filters:
 
 Mean x*x filter filled with 1's.
 
@@ -15,10 +15,4 @@ Laplacian 3*3 filter, -1*4 + 4 version.
 
 Prewitt vector length 3*3 filter, horizontal and vertical combined.
 
-Good boundary solution:
-
 Each boundary "pixel" is defined as equal to the closest image pixel.
-
-Bad boundary solution:
-
-"What boundary?"...
